#279: Added IPC player & playlist tests